--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ footer {
 <span>
 
 
-<img src='work/img/승리.jpg' width="20%"> <br><br>
+<img src='work/img/victory.jpg' width="20%"> <br><br>
 
 <table>
 <tr>	
